add image to connect

--- a/18.connect/style.css
+++ b/18.connect/style.css
@@ -231,7 +231,8 @@ textarea {
 
 .location img {
   width: 100%;
-  max-width: 900px;
+  height: 600px;
+  max-width: 400px;
   border-radius: 10px;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
